--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.1",
-    "expo": "~50.0.2",
-    "expo-font": "^11.10.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^44.0.6",
+    "expo-font": "~10.0.4",
+    "expo-status-bar": "~1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.63.5",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
