--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.1",
-    "expo": "^44.0.6",
+    "expo": "^50.0.6",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.63.5",
-    "react-native-web": "~0.19.6"
+    "react-native": "^0.73.4",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
