--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.1",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.21",
     "expo": "^50.0.6",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
