--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.6",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
@@ -22,7 +23,8 @@
     "react-native": "^0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
