--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "^0.19.10",
     "react-redux": "^9.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-file-system": "~16.0.8",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
