--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^9.1.0",
     "yup": "^1.4.0",
     "expo-file-system": "~16.0.8",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
