--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.6",
+    "expo-file-system": "~16.0.8",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
+    "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.2.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
@@ -25,10 +29,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "^0.19.10",
     "react-redux": "^9.1.0",
-    "yup": "^1.4.0",
-    "expo-file-system": "~16.0.8",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
